logs/pihdf.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coverage'...
Listing './lib/python3.5/site-packages/coverage/fullcoverage'...
Listing './lib/python3.5/site-packages/coverage/htmlfiles'...
Listing './lib/python3.5/site-packages/coverage-4.4.2.dist-info'...
Listing './lib/python3.5/site-packages/myhdl'...
Listing './lib/python3.5/site-packages/myhdl/conversion'...
Listing './lib/python3.5/site-packages/myhdl-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/myhdl_lib'...
Listing './lib/python3.5/site-packages/myhdl_lib/simulation'...
Compiling './lib/python3.5/site-packages/myhdl_lib/simulation/payload_generator.py'...
***   File "./lib/python3.5/site-packages/myhdl_lib/simulation/payload_generator.py", line 97
    print payload_generator(levels=2, dimensions=[[3,4,5],[5,5,5]], sequential=False, string=False, max_int=8)
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/myhdl_lib-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pihdf'...
Listing './lib/python3.5/site-packages/pihdf/bin'...
Compiling './lib/python3.5/site-packages/pihdf/bin/command_line.py'...
***   File "./lib/python3.5/site-packages/pihdf/bin/command_line.py", line 58
    print __doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pihdf/interfaces'...
Compiling './lib/python3.5/site-packages/pihdf/interfaces/Bus.py'...
***   File "./lib/python3.5/site-packages/pihdf/interfaces/Bus.py", line 67
    print "Unknown register type: {}".format(tp)
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pihdf/interfaces/HSD.py'...
***   File "./lib/python3.5/site-packages/pihdf/interfaces/HSD.py", line 204
    raise ValueError, "Unknown direction %d".format(self.direction)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pihdf/mylog.py'...
***   File "./lib/python3.5/site-packages/pihdf/mylog.py", line 38
    print '[' + OKGREEN + 'INFO' + ENDC + '] ' + msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pihdf/printers'...
Compiling './lib/python3.5/site-packages/pihdf/printers/comp_list.py'...
***   File "./lib/python3.5/site-packages/pihdf/printers/comp_list.py", line 47
    print "      ", e
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pihdf/printers/ip_wrapper_gen.py'...
***   File "./lib/python3.5/site-packages/pihdf/printers/ip_wrapper_gen.py", line 26
    print "\nGenerating .py wrapper file."
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pihdf/printers/mfdesign.py'...
***   File "./lib/python3.5/site-packages/pihdf/printers/mfdesign.py", line 212
    print "      ", e
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pihdf/printers/verilog.py'...
***   File "./lib/python3.5/site-packages/pihdf/printers/verilog.py", line 81
    print "Warning: RESET signal not specified!"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pihdf-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/myhdl'...
Listing './share/myhdl/cosimulation'...
Listing './share/myhdl/cosimulation/cver'...
Listing './share/myhdl/cosimulation/cver/test'...
Compiling './share/myhdl/cosimulation/cver/test/bin2gray.py'...
Compiling './share/myhdl/cosimulation/cver/test/dff.py'...
Compiling './share/myhdl/cosimulation/cver/test/dff_clkout.py'...
Compiling './share/myhdl/cosimulation/cver/test/inc.py'...
Compiling './share/myhdl/cosimulation/cver/test/test_all.py'...
Listing './share/myhdl/cosimulation/icarus'...
Listing './share/myhdl/cosimulation/icarus/test'...
Compiling './share/myhdl/cosimulation/icarus/test/bin2gray.py'...
Compiling './share/myhdl/cosimulation/icarus/test/dff.py'...
Compiling './share/myhdl/cosimulation/icarus/test/dff_clkout.py'...
Compiling './share/myhdl/cosimulation/icarus/test/inc.py'...
Compiling './share/myhdl/cosimulation/icarus/test/test.py'...
Compiling './share/myhdl/cosimulation/icarus/test/test_all.py'...
Listing './share/myhdl/cosimulation/modelsim'...
Listing './share/myhdl/cosimulation/modelsim/test'...
Compiling './share/myhdl/cosimulation/modelsim/test/bin2gray.py'...
Compiling './share/myhdl/cosimulation/modelsim/test/dff.py'...
Compiling './share/myhdl/cosimulation/modelsim/test/dff_clkout.py'...
Compiling './share/myhdl/cosimulation/modelsim/test/inc.py'...
Compiling './share/myhdl/cosimulation/modelsim/test/test_all.py'...
Listing './share/myhdl/cosimulation/test'...
Compiling './share/myhdl/cosimulation/test/bin2gray.py'...
Compiling './share/myhdl/cosimulation/test/dff.py'...
Compiling './share/myhdl/cosimulation/test/dff_clkout.py'...
Compiling './share/myhdl/cosimulation/test/inc.py'...
Compiling './share/myhdl/cosimulation/test/test_all.py'...
Compiling './share/myhdl/cosimulation/test/test_bin2gray.py'...
Compiling './share/myhdl/cosimulation/test/test_dff.py'...
Compiling './share/myhdl/cosimulation/test/test_inc.py'...
Listing './share/myhdl/cosimulation/test/verilog'...
Listing './share/python-wheels'...
